# SVF2.7-for-llvm15

./: CMakeLists.txt  README.md  SVF-2.7  test_pointer.c
svf-llvm/include/SVF-LLVM/: LLVMUtil.h
svf-pointer-analysis/: CMakeLists.txt
svf-pointer-analysis/src/: MySVFPointerPass.cpp
svf/include/SVFIR/: SVFType.h
